# mcp-x-server

./: .gitignore  IMPLEMENTATION_COMPLETE.md  README.md  mcp.json  pyproject.toml
config/: config.yaml  cookies.example.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_OPTIMIZATION.md  COMPREHENSIVE_REVIEW.md  DEVELOPMENT.md  DEVELOPMENT_WORKFLOW.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  ISSUES_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PR_DESCRIPTION.md  QUICKSTART.md  QUICK_INSTALL.md  SETUP.md  TESTING_AND_USAGE.md  TESTING_PLAN.md  TOOL_QUICK_REFERENCE.md  TOOL_STATUS_ANALYSIS.md  TWITTER_MCP_TOOL_RECOMMENDATIONS.md
scripts/: add_account.py  mcp-start.sh  run.sh  setup.sh  setup_twscrape_account.py  verify.sh
src/: __init__.py  server.py
src/auth/: __init__.py  account_manager.py
src/clients/: __init__.py  twikit_client.py  twscrape_client.py
src/tools/: post_tools.py  read_tools.py
src/utils/: rate_limiter.py  validators.py
tests/: test_new_tools.py  test_read_write.py  test_server.py  test_write_only.py
